--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
-    "lightbox.js-react": "^0.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.2",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
+    "react-icons-kit": "^2.0.0",
+    "react-multiple-password-validator": "^2021.10.28-1.1.5",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
